# nxt_ai

./: .gitignore  Readme.md
0-langchain-chatbot/: README.md
0-langchain-chatbot/app/: .env.example  README.md  pyproject.toml
0-langchain-chatbot/app/src/: chain.py  main.py
0-langchain-chatbot/crawler/: .env.example  README.md  crawler.py  pyproject.toml  utils.py
0-langchain-chatbot/infra/: README.md  main.tf  outputs.tf  providers.tf  variables.tf
0-langchain-chatbot/slack/: .env.example  Dockerfile  handler.py  package-lock.json  package.json  rag_chain.py  requirements.txt  serverless.yml
2-data-engineering/: .env.example  README.md  pyproject.toml
2-data-engineering/app/: main.py
2-data-engineering/infra/: providers.tf  main.tf  outputs.tf
2-data-engineering/src/chunker/: fixed_chunker.py  recursive_chunker.py  semantic_chunker.py
2-data-engineering/src/cleaning/: table_to_markdown.py  text_normalize.py
2-data-engineering/src/embedding/: embedder.py
2-data-engineering/src/loader/: pdf_loader.py  webbase_loader.py
2-data-engineering/src/pipeline/: pipeline.py
2-data-engineering/src/structuring/: structurer.py
2-data-engineering/src/tests/: test_pdf_loader.py  test_web_loader.py
