[project]
name = "2-data-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "pypdf>=6.0.0",
    "requests>=2.32.5",
    "boto3>=1.34.162",
    "opensearch-py==2.6.0",
    "requests-aws4auth==1.2.3",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "streamlit>=1.39.0",
    "python-dotenv>=1.0.1",
    "langchain-aws>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
